# reservation_study

./: .env  README.md  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  reservation.rs  reservation_query.rs  reservation_status.rs  reservations_filter.rs
migrations/: 20250526090311_reservation_trigger.down.sql
reservation/: Cargo.toml
reservation/src/: lib.rs  manager.rs
reservation/src/db/: mod.rs  query_builder_ext.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  service.rs
