[package]
name = "reservation-service"
version = "0.1.0"
edition = "2024"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.98"
futures = { version = "0.3.31", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tokio = { version = "1.45.1", features = ["full"] }
tonic = { version = "0.13.1", features = ["gzip"] }
